<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/player_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/player_rec_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:visibility="gone"
            tools:listitem="@layout/player_card">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/empty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="No Data"
                android:textColor="#0000ff"
                android:textSize="30sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="getAllPlayers"
                    android:text="@string/get_players"
                    android:textAllCaps="false"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="deleteAllPlayers"
                    android:text="@string/delete_players"
                    android:textAllCaps="false"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="insertDialog"
                    android:text="@string/insert_player"
                    android:textAllCaps="false"
                    android:textSize="14dp" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>


</LinearLayout>